force-app/main/default/objects/Future_Differential__c/Future_Differential__c.object-meta.xml
<CustomObject>
    <description>HCV calculation uses the object to find future differential.

The logic should be as 
a.	Check for the grade + supply type + start day of the lifting window. 
b.	In the “Future Differentials” object, check if exists a row where the starting date of lifting window falls in the date range. 
c.	If such row exists , replace the “Base Quote – Supplement quote” with the corresponding differential value.</description>
    <label>Future Differential</label>
    <nameField>
        <displayFormat>DIFF-{0000000}</displayFormat>
        <label>Differential  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Future Differentials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>