force-app/main/default/objects/Future_Differential__c/fields/Diff_Value__c.field-meta.xml
<CustomField>
    <fullName>Diff_Value__c</fullName>
    <label>Diff Value</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>