force-app/main/default/objects/Future_Differential__c/fields/SubGradeSupplyType__c.field-meta.xml
<CustomField>
    <fullName>SubGradeSupplyType__c</fullName>
    <formula>Grade__c+&quot;_&quot;+ Supply_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SubGradeSupplyType</label>
    <type>Text</type>
</CustomField>