force-app/main/default/objects/Future_Differential__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Grade__c</columns>
    <columns>Supply_Type__c</columns>
    <columns>Valid_From__c</columns>
    <columns>Valid_To__c</columns>
    <columns>Diff_Value__c</columns>
    <columns>SubGradeSupplyType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>